feat : 토큰 에러 수정

--- a/genesis/src/main/resources/jwt.yaml
+++ b/genesis/src/main/resources/jwt.yaml
@@ -1,5 +1,5 @@
 jwt:
   secret: "genesis"
-  expirationTime: "10000"
+  expirationTime: "6000000"
   tokenPrefix: "Bearer "
   headerString: "Authorization"
