--- a/genesis/build.gradle
+++ b/genesis/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-test
+	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.5.1'
+
 
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	// https://mvnrepository.com/artifact/com.auth0/java-jwt
